--- a/package.json
+++ b/package.json
@@ -11,11 +11,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "sass": "^1.51.0",
     "pinia": "^2.0.14",
+    "sass": "^1.51.0",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15"
   },
@@ -26,7 +23,8 @@
     "eslint-plugin-vue": "^8.2.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "floating-vue": "^2.0.0-y.0"
   },
   "pre-commit": {
     "run": [
