--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oli.portfolio",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Personal Website",
   "main": "index.js",
   "author": "Olimpiu Seulean",
@@ -9,6 +9,9 @@
     "build": "vite build",
     "preview": "vite preview --port 5050",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+  },
+  "engines": {
+    "node": "^18.2.0"
   },
   "dependencies": {
     "pinia": "^2.0.14",
