Added Vue cookie module.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "uuid": "^8.3.2",
     "vite": "^2.9.9",
     "vue-eslint-parser": "^9.0.2",
-    "vue3-carousel": "^0.1.40"
+    "vue3-carousel": "^0.1.40",
+    "vue-cookie-accept-decline": "^6.0.3"
   },
   "pre-commit": {
     "run": [
