--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "prettier": "^2.5.1",
     "uuid": "^8.3.2",
     "vite": "^2.9.9",
+    "vue-cookie-accept-decline": "^6.0.3",
     "vue-eslint-parser": "^9.0.2",
-    "vue3-carousel": "^0.1.40",
-    "vue-cookie-accept-decline": "^6.0.3"
+    "vue3-carousel": "^0.1.40"
   },
   "pre-commit": {
     "run": [
