--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "^8.17.0",
     "eslint-plugin-vue": "^8.2.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.5.1",
+    "prettier": "2.7.1",
     "uuid": "^8.3.2",
     "vite": "^2.9.9",
     "vue-cookie-accept-decline": "^6.0.3",
