redesign Technologies view.

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "uuid": "^8.3.2",
     "vite": "^2.9.9",
     "vue-cookie-accept-decline": "^6.0.3",
-    "vue-eslint-parser": "^9.0.2",
-    "vue3-carousel": "^0.1.40"
+    "vue-eslint-parser": "^9.0.2"
   },
   "pre-commit": {
     "run": [
