--- a/package.json
+++ b/package.json
@@ -8,31 +8,19 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
-  },
-  "engines": {
-    "node": "^18.2.0"
+    "lint": "eslint . --ext .vue,.js --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "pinia": "^2.0.14",
-    "sass": "^1.51.0",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint": "^8.17.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "pre-commit": "^1.2.2",
-    "prettier": "2.7.1",
-    "vite": "^2.9.9",
-    "vue-cookie-accept-decline": "^6.0.3",
-    "vue-eslint-parser": "^9.0.2"
-  },
-  "pre-commit": {
-    "run": [
-      "lint"
-    ]
+    "@vitejs/plugin-vue": "^3.0.0",
+    "vite": "^3.0.0",
+    "pinia": "^2.0.16",
+    "sass": "^1.51.0",
+    "eslint": "^8.19.0",
+    "eslint-plugin-vue": "^9.2.0",
+    "vue-cookie-accept-decline": "^6.0.3"
   }
 }
