--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.51.0",
     "eslint": "^8.19.0",
     "eslint-plugin-vue": "^9.2.0",
-    "vue-cookie-accept-decline": "^6.0.3"
+    "vue-cookie-accept-decline": "^6.0.3",
+    "pre-commit": "^1.2.2"
   }
 }
