--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "vite build",
     "preview": "vite preview --port 5050",
     "lint": "eslint . --ext .vue,.js --fix --ignore-path .gitignore .",
-    "lint:fix": "eslint . --ext .vue,.js --fix --ignore-path .gitignore . --fix"
+    "lint:fix": "eslint . --ext .vue,.js --fix --ignore-path .gitignore . --fix",
+    "stylelint": "stylelint \"**/*.{scss,vue}\"",
+    "stylelint:fix": "stylelint \"**/*.{scss,vue}\" --fix",
+    "test:unit": "vitest"
   },
   "dependencies": {
     "vue": "^3.2.37",
@@ -17,12 +20,19 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
-    "vite": "^2.9.9",
-    "pinia": "^2.0.16",
-    "sass": "^1.51.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
     "eslint": "^8.19.0",
     "eslint-plugin-vue": "^9.2.0",
-    "pre-commit": "^1.2.2"
+    "happy-dom": "^8.2.2",
+    "pinia": "^2.0.16",
+    "postcss-html": "^1.5.0",
+    "postcss-scss": "^4.0.6",
+    "pre-commit": "^1.2.2",
+    "sass": "^1.51.0",
+    "stylelint": "^14.15.0",
+    "stylelint-config-standard": "^29.0.0",
+    "vite": "^2.9.9",
+    "vitest": "^0.28.3"
   },
   "pre-commit": {
     "run": [
