--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js --fix --ignore-path .gitignore .",
-    "lint:fix": "eslint . --ext .vue,.js --fix --ignore-path .gitignore . --fix",
+    "lint": "npm run lint:code ; npm run stylelint",
+    "lint:fix": "npm run lint:code:fix ; npm run stylelint:fix",
+    "lint:code": "eslint . --ext .vue,.js --fix --ignore-path .gitignore .",
+    "lint:code:fix": "eslint . --ext .vue,.js --fix --ignore-path .gitignore . --fix",
     "stylelint": "stylelint \"**/*.{scss,vue}\"",
     "stylelint:fix": "stylelint \"**/*.{scss,vue}\" --fix",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "prepare": "husky install"
   },
   "dependencies": {
     "vue": "^3.2.37",
@@ -24,6 +27,7 @@
     "eslint": "^8.19.0",
     "eslint-plugin-vue": "^9.2.0",
     "happy-dom": "^8.2.2",
+    "husky": "^8.0.3",
     "pinia": "^2.0.16",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
@@ -33,10 +37,5 @@
     "stylelint-config-standard": "^29.0.0",
     "vite": "^2.9.9",
     "vitest": "^0.28.3"
-  },
-  "pre-commit": {
-    "run": [
-      "lint"
-    ]
   }
 }
