--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5050",
+    "preview": "vite preview",
     "lint": "npm run lint:code ; npm run stylelint",
     "lint:fix": "npm run lint:code:fix ; npm run stylelint:fix",
     "lint:code": "eslint . --ext .vue,.js --fix --ignore-path .gitignore .",
@@ -17,6 +17,8 @@
     "test:unit": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:coverage:summary": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
+    "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
+    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -27,7 +29,9 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-c8": "^0.28.4",
     "@vue/test-utils": "^2.0.0-rc.18",
+    "cypress": "^12.5.1",
     "eslint": "^8.19.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.2.0",
     "happy-dom": "^8.2.2",
     "husky": "^8.0.3",
@@ -36,6 +40,7 @@
     "postcss-scss": "^4.0.6",
     "pre-commit": "^1.2.2",
     "sass": "^1.51.0",
+    "start-server-and-test": "^1.15.3",
     "stylelint": "^15.0.0",
     "stylelint-config-standard": "^30.0.1",
     "vite": "^4.0.0",
