--- a/package.json
+++ b/package.json
@@ -26,24 +26,24 @@
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitest/coverage-c8": "^0.28.4",
-    "@vue/test-utils": "^2.0.0-rc.18",
-    "cypress": "^12.5.1",
-    "eslint": "^8.19.0",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitest/coverage-c8": "^0.29.3",
+    "@vue/test-utils": "^2.3.1",
+    "cypress": "^12.8.1",
+    "eslint": "^8.36.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.2.0",
-    "happy-dom": "^8.2.2",
+    "happy-dom": "^8.9.0",
     "husky": "^8.0.3",
-    "pinia": "^2.0.16",
+    "pinia": "^2.0.33",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
     "pre-commit": "^1.2.2",
-    "sass": "^1.51.0",
-    "start-server-and-test": "^1.15.3",
-    "stylelint": "^15.0.0",
-    "stylelint-config-standard": "^30.0.1",
-    "vite": "^4.0.0",
-    "vitest": "^0.28.3"
+    "sass": "^1.59.3",
+    "start-server-and-test": "^2.0.0",
+    "stylelint": "^15.3.0",
+    "stylelint-config-standard": "^31.0.0",
+    "vite": "^4.2.0",
+    "vitest": "^0.29.3"
   }
 }
