refactored Footer design. 🎨

--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "npm run lint:code ; npm run stylelint",
-    "lint:fix": "npm run lint:code:fix ; npm run stylelint:fix",
-    "lint:code": "eslint . --ext .vue,.js --fix --ignore-path .gitignore .",
-    "lint:code:fix": "eslint . --ext .vue,.js --fix --ignore-path .gitignore . --fix",
+    "lint": "eslint . --ext .vue,.js --fix --ignore-path .gitignore .",
+    "lint:fix": "eslint . --ext .vue,.js --fix --ignore-path .gitignore . --fix",
     "stylelint": "stylelint \"**/*.{scss,vue}\"",
     "stylelint:fix": "stylelint \"**/*.{scss,vue}\" --fix",
     "test:unit": "vitest",
