--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oli.portfolio",
   "version": "4.4.0",
   "description": "Personal Website",
-  "main": "index.js",
+  "main": "src/main.js",
   "author": "Olimpiu Seulean",
   "scripts": {
     "dev": "vite",
@@ -15,8 +15,6 @@
     "test:unit": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:coverage:summary": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
-    "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -27,9 +25,7 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitest/coverage-c8": "^0.29.3",
     "@vue/test-utils": "^2.3.1",
-    "cypress": "^12.8.1",
     "eslint": "^8.36.0",
-    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.2.0",
     "happy-dom": "^8.9.0",
     "husky": "^8.0.3",
@@ -38,7 +34,6 @@
     "postcss-scss": "^4.0.6",
     "pre-commit": "^1.2.2",
     "sass": "^1.59.3",
-    "start-server-and-test": "^2.0.0",
     "stylelint": "^15.3.0",
     "stylelint-config-standard": "^31.0.0",
     "vite": "^4.2.0",
