--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "lint:fix": "eslint . --ext .vue,.js --fix --ignore-path .gitignore . --fix",
     "stylelint": "stylelint \"**/*.{scss,vue}\"",
     "stylelint:fix": "stylelint \"**/*.{scss,vue}\" --fix",
-    "test:unit": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:coverage:summary": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -23,20 +20,15 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
-    "@vitest/coverage-c8": "^0.29.3",
-    "@vue/test-utils": "^2.3.1",
     "eslint": "^8.36.0",
     "eslint-plugin-vue": "^9.2.0",
-    "happy-dom": "^8.9.0",
     "husky": "^8.0.3",
     "pinia": "^2.0.33",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
-    "pre-commit": "^1.2.2",
     "sass": "^1.59.3",
     "stylelint": "^15.3.0",
     "stylelint-config-standard": "^31.0.0",
-    "vite": "^4.2.0",
-    "vitest": "^0.29.3"
+    "vite": "^4.2.0"
   }
 }
