--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "audit-ci": "^7.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-html": "^8.1.3",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-vue": "^10.6.2",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
-    "pinia": "^3.0.4",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
     "sass": "^1.59.3",
@@ -42,5 +42,8 @@
     "stylelint-scss": "^6.13.0",
     "vite": "^7.2.6",
     "vue-eslint-parser": "^10.2.0"
+  },
+  "engines": {
+    "node": ">=22.0.0"
   }
 }
